# AIPyS

./: .buildinfo  .gitignore  .pypirc  AIPyS.CLI.html  AIPyS.classification.CNN.html  AIPyS.classification.bayes.html  AIPyS.classification.html  AIPyS.html  AIPyS.segmentation.cellpose.html  AIPyS.segmentation.html  AIPyS.segmentation.parametric.html  AIPyS.standAlone.html  AIPyS.supportFunctions.html  AIPyS.temp_function.html  CLI_instructions.txt  Convolutional Neural Network - Classifier 2024.ipynb  Enhanced AIPS Structure for Cell Detection.txt  Image_toSCimage.ipynb  LICENSE  License.Rmd  License.html  MANIFEST.in  README.md  Tempsetup.py  Untitled.ipynb  deploying_aipys.html  dirStructure.txt  docs_requirements.txt  draft.ipynb  draft.py  env.yml  environment.yml  environment_sp.yml  genindex.html  gitInstraction.txt  index.html  installation.html  modules.html  objects.inv  parameters.h5  (+13 more)
.doctrees/: AIPyS.classification.CNN.doctree  AIPyS.classification.bayes.doctree  AIPyS.classification.doctree  AIPyS.doctree  AIPyS.segmentation.cellpose.doctree  AIPyS.segmentation.parametric.doctree  AIPyS.standAlone.doctree  AIPyS.supportFunctions.doctree  AIPyS.temp_function.doctree  environment.pickle  index.doctree  installation.doctree  modules.doctree
.ipynb_checkpoints/: Convolutional Neural Network - Classifier 2024-checkpoint.ipynb  Image_toSCimage-checkpoint.ipynb
AIPyS/: AIPS_cellpose.py  AIPS_file_display.py  AIPS_functions.py  AIPS_granularity.py  AIPS_module.py  Baysian_deploy.py  Baysian_training.py  CNN_deploy.py  DirectoryTree.txt  Display_composit.py  Granularity_cellprofiler.py  controls.py  display_and_xml.py  fileCreateCalc.py  model_builder.py
AIPyS.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
AIPySPro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
AIPyS_old/: AIPS_cellpose.py  AIPS_module.py  Display_composit.py
AIpyS.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
_modules/: index.html
_sources/: AIPyS.classification.rst.txt  AIPyS.rst.txt  AIPyS.segmentation.parametric.rst.txt  AIPyS.segmentation.rst.txt  AIPyS.standAlone.rst.txt  AIPyS.temp_function.rst.txt  (+3 more)
(+582 files in other folders)
