[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "AIPyS"
version = "0.0.1"
dependencies = [
    'pymc3',
    'matplotlib',
    'pandas',
    'scikit-image',
    'matplotlib',
    'scikit-learn',
    'plotly_express',
    'seaborn',
    'cellpose',
    'scipy'
]
[tool.setuptools.packages]
find = {}
[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["AIPyS"]  # ["."] by default
include = ["AIPyS*"]  # ["*"] by default
exclude = ["AIPyS.tests*"]  # empty by default
namespaces = false  # true by default