[metadata]
name = AIpyS
version = 0.0.1
author = Gil
author_email = gil.kanfer.il@gmail.com
description = o	AI Powered Photoswitchable Genetic CRISPR Screen, Version 2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gkanfer
project_urls =
    Bug Tracker = https://github.com/gkanfer/AIPyS
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src