[metadata]
name = AIPyS
version = 0.0.1
author = Gil
author_email = gil.kanfer.il@gmail.com
description = AI Powered Photoswitchable Genetic CRISPR Screen, Version 2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gkanfer
project_urls =
    Bug Tracker = https://github.com/gkanfer/AIPyS
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.5
include_package_data = True
[options.packages.find]  # (always `find` even if `find_namespace:` was used before)
# This section is optional as well as each of the following options:
where=AIPyS  # . by default
include=AIPyS*  # * by default
exclude=AIPyS.tests*  # empty by default